fix(web-layoutgrid): fix safari flex-wrap issue

--- a/styles/web/sass/core/widgets/_layoutgrid.scss
+++ b/styles/web/sass/core/widgets/_layoutgrid.scss
@@ -24,6 +24,11 @@
     flex-wrap: wrap;
     margin-right: -$gutter-size;
     margin-left: -$gutter-size;
+
+    &::before,
+    &::after {
+        content: normal;
+    }
 }
 
 .no-gutters {
